infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: # Fix: Change 'sepc' to 'spec'
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels: # Fix: Correct 'lebels' to 'labels'
        app: client
    spec:
      containers:
        - name: client
          image: suyashsaurabh/client

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
