infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec: # Fix: Change 'sepc' to 'spec'
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels: # Fix: Correct 'lebels' to 'labels'
        app: posts
    spec:
      containers:
        - name: posts
          image: suyashsaurabh/posts

---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4002
      targetPort: 4002
